--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" type="text/css" href="/css/cosmo.css">
 	</head>
 	<body>
+		
+		background-image:url('gorilla logo.png'); 
 		<<nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
